# melo-api

./: .bazelrc  .commitlintrc  .commitlintrc.json  .dockerignore  .env.docker-compose  .env.sample  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci-bazel.yml  .gitlab-ci.yaml  .gitlab-ci.yml  .huskyrc  .huskyrc.json  .lintstagedrc  .lintstagedrc.json  .tiltignore  .yarnrc  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.development  ISSUE_NAMING.md  LICENSE  MAINTAINERS  NOTE.md  README.md  SETUP.md  TODO.md  WORKSPACE.bazel  docker-compose.development.yml  docker-compose.yml  helm-dep-up.sh  jest.config.json  kaniko-dep-up.sh  kind-with-registry.sh  nest-cli.json  (+9 more)
.gitlab/: CODEOWNERS
apps/action/src/: BUILD.bazel  action.config.service.interface.d.ts  action.config.service.spec.ts  action.config.service.ts  action.config.spec.ts  action.config.ts  action.controller.ts  action.events.gateway.spec.ts  action.events.gateway.ts  action.module.ts  action.service.spec.ts  action.service.ts  main.ts
apps/album/src/: BUILD.bazel  album.config.service.interface.d.ts  album.config.service.interface.ts  album.config.service.spec.ts  album.config.service.ts  album.config.spec.ts  album.config.ts  album.controller.spec.ts  album.controller.ts  album.elasticsearch.options.factory.spec.ts  album.elasticsearch.options.factory.ts  album.events.gateway.spec.ts  album.events.gateway.ts  album.module.ts  album.service.interface.d.ts  album.service.interface.ts  album.service.spec.ts  album.service.ts  main.ts
apps/artist/src/: BUILD.bazel  artist.config.service.interface.d.ts  artist.config.service.interface.ts  artist.config.service.spec.ts  artist.config.service.ts  artist.config.spec.ts  artist.config.ts  artist.controller.spec.ts  artist.controller.ts  artist.elasticsearch.options.factory.spec.ts  artist.elasticsearch.options.factory.ts  artist.events.gateway.spec.ts  artist.events.gateway.ts  artist.module.ts  artist.service.interface.d.ts  artist.service.spec.ts  artist.service.ts  main.ts
apps/common/Tiltfile/: Tiltfile.bazel
apps/const/src/: BUILD.bazel  const.config.service.interface.d.ts  const.config.service.spec.ts  const.config.service.ts  const.config.spec.ts  const.config.ts  const.controller.spec.ts  const.controller.ts  const.events.gateway.spec.ts  const.events.gateway.ts  const.module.ts  const.service.interface.ts  const.service.spec.ts  const.service.ts  main.ts
apps/download/src/: BUILD.bazel  download.config.service.interface.d.ts  download.config.service.interface.ts  download.config.service.spec.ts  download.config.service.ts  download.config.spec.ts  download.config.ts  download.controller.spec.ts  download.controller.ts  download.elasticsearch.options.factory.spec.ts  download.elasticsearch.options.factory.ts  download.events.gateway.spec.ts  download.events.gateway.ts  download.module.ts  download.service.interface.d.ts  download.service.interface.ts  download.service.spec.ts  download.service.ts  main.ts
apps/emotion/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
apps/emotion/docker/: Dockerfile
apps/emotion/k8s/: Chart.yaml  values.yaml
apps/emotion/src/: BUILD.bazel  emotion.config.service.interface.d.ts  emotion.config.service.spec.ts  emotion.config.service.ts  emotion.config.spec.ts  emotion.config.ts  emotion.controller.spec.ts  emotion.controller.ts  emotion.elasticsearch.options.factory.spec.ts  emotion.elasticsearch.options.factory.ts  emotion.events.gateway.spec.ts  emotion.events.gateway.ts  emotion.module.ts  emotion.service.interface.d.ts  emotion.service.interface.ts  emotion.service.spec.ts  emotion.service.ts  main.ts
apps/emotion/test/: app.e2e-spec.ts
apps/emotion/tilt_modules/: extensions.json
apps/file/src/: BUILD.bazel  file.config.service.interface.d.ts  file.config.service.spec.ts  file.config.service.ts  file.config.spec.ts  file.config.ts  file.controller.spec.ts  file.controller.ts  file.entity.repository.interface.ts  file.entity.ts  file.events.gateway.spec.ts  file.events.gateway.ts  file.module.ts  file.service.spec.ts  file.service.ts  file.type-orm.options.factory.spec.ts  file.type-orm.options.factory.ts  main.ts
apps/jwks/src/: BUILD.bazel  jwks.config.service.interface.d.ts  jwks.config.service.interface.ts  jwks.config.service.spec.ts  jwks.config.service.ts  jwks.config.spec.ts  jwks.config.ts  jwks.controller.spec.ts  jwks.controller.ts  jwks.entity.repository.interface.ts  jwks.entity.spec.ts  jwks.entity.ts  jwks.events.gateway.spec.ts  jwks.events.gateway.ts  jwks.module.ts  jwks.service.interface.d.ts  jwks.service.spec.ts  jwks.service.ts  jwks.type-orm.options.factory.spec.ts  jwks.type-orm.options.factory.ts  main.ts
apps/melo-api/: .gitlab-ci.yml  Tiltfile  Tiltfile.bazel  devspace.yaml  tsconfig.app.json
apps/melo-api/docker/: Dockerfile
apps/melo-api/k8s/: Chart.yaml  values.yaml
apps/melo-api/src/: BUILD.bazel  main.ts
apps/melo-api/test/: app.e2e-spec.ts  jest-e2e.json
apps/melo-api/tilt_modules/: extensions.json
apps/playlist/src/: BUILD.bazel  main.ts  playlist.config.service.interface.d.ts  playlist.config.service.spec.ts  playlist.config.service.ts  playlist.config.spec.ts  playlist.config.ts  playlist.controller.spec.ts  playlist.controller.ts  playlist.events.gateway.spec.ts  playlist.events.gateway.ts  playlist.module.ts  playlist.mongoose.options.factory.spec.ts  playlist.mongoose.options.factory.ts  playlist.schema.spec.ts  playlist.schema.ts  playlist.service.interface.d.ts  playlist.service.spec.ts  playlist.service.ts
apps/relation/src/: BUILD.bazel  main.ts  relation.config.service.interface.d.ts  relation.config.service.spec.ts  relation.config.service.ts  relation.config.spec.ts  relation.config.ts  relation.controller.spec.ts  relation.controller.ts  relation.dgraph.options.factory.spec.ts  relation.dgraph.options.factory.ts  relation.events.gateway.spec.ts  relation.events.gateway.ts  relation.module.ts  relation.service.interface.d.ts  relation.service.spec.ts  relation.service.ts
(+2195 files in other folders)
