set_team("2c6dd58a-7684-426a-9369-7e19683b685a")
# enable_feature("snapshots")
# enable_feature("events")

load("ext://namespace", "namespace_yaml")
k8s_yaml(namespace_yaml("melo"))

k8s_yaml(helm(
  "k8s",
  name = "melo",
  namespace = "melo",
))

load("../common/bazel/tilt/index.bzl", "bazel_build")
bazel_build("melo_emotion", "src:emotion_container_push")

