set_team("2c6dd58a-7684-426a-9369-7e19683b685a")
# enable_feature("snapshots")
# enable_feature("events")

load("ext://namespace", "namespace_yaml")
k8s_yaml(namespace_yaml("melo"))

k8s_yaml(helm(
  "k8s",
  name = "melo",
  namespace = "melo",
  set = [
    "image.repository=melo_melo-api",
    "redis.fullnameOverride=melo-redis",
  ]
))

load("../common/Tiltfile/Tiltfile.bazel", "bazel_build")
bazel_build("melo_melo-api", "src:melo-api_container_push")

k8s_resource(
  workload = "melo-melo-api",
  port_forwards = [
    "8080:8080",
    ],
)
