load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:private"])

ts_config(
    name = "emotion_ts_config",
    src = "//apps/emotion:tsconfig.app.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "emotion_ts_library",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    runtime = "nodejs",
    tsconfig = ":emotion_ts_config",
    deps = [
        "//libs/apm/src:apm_ts_library",
        "//libs/common/src:common_ts_library",
        "//libs/prom/src:prom_ts_library",
        "//libs/sentry/src:sentry_ts_library",
        "@npm//@elastic/elasticsearch",
        "@npm//@nestjs/common",
        "@npm//@nestjs/config",
        "@npm//@nestjs/core",
        "@npm//@nestjs/elasticsearch",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/platform-socket.io",
        "@npm//@nestjs/websockets",
        "@npm//@types/ms",
        "@npm//@types/node",
        "@npm//@types/socket.io",
        "@npm//ms",
        "@npm//redis",
    ],
)

nodejs_binary(
    name = "emotion_nodejs_binary",
    data = [
        ":emotion_ts_library",
    ],
    entry_point = ":main.ts",
    templated_args = [
        "--nobazel_run_linker",
        "--node_options=--require=source-map-support/register",
    ],
)

nodejs_image(
    name = "emotion_nodejs_image",
    binary = ":emotion_nodejs_binary",
)

container_push(
    name = "emotion_container_push",
    format = "Docker",
    image = ":emotion_nodejs_image",
    registry = "localhost:5000",
    repository = "melo_emotion",
    tag = "{COMMIT_SHA}",
)

ts_library(
    name = "emotion_test_ts_library",
    srcs = glob(["*spec.ts"]),
    runtime = "nodejs",
    deps = [
        ":emotion_ts_library",
        "//libs/common/src:common_ts_library",
        "@npm//@nestjs/config",
        "@npm//@nestjs/elasticsearch",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
        "@npm//rxjs",
    ],
)

jest_test(
    name = "emotion_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":emotion_test_ts_library",
    ],
)
