load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "file_ts_config",
    src = "//apps/file:tsconfig.app.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "file_ts_library",
    srcs = glob(
        ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    module_name = "@melo/file",
    runtime = "nodejs",
    tsconfig = ":file_ts_config",
    deps = [
        "//libs/apm/src:apm_ts_library",
        "//libs/common/src:common_ts_library",
        "//libs/prom/src:prom_ts_library",
        "//libs/sentry/src:sentry_ts_library",
        "@npm//@nestjs/common",
        "@npm//@nestjs/config",
        "@npm//@nestjs/core",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/platform-socket.io",
        "@npm//@nestjs/typeorm",
        "@npm//@nestjs/websockets",
        "@npm//@types/bluebird",
        "@npm//@types/mime-types",
        "@npm//@types/mmmagic",
        "@npm//@types/ms",
        "@npm//@types/node",
        "@npm//@types/socket.io",
        "@npm//@types/source-map-support",
        "@npm//@types/uuid",
        "@npm//aws-sdk",
        "@npm//bluebird",
        "@npm//mime-types",
        "@npm//ms",
        "@npm//redis",
        "@npm//reflect-metadata",
        "@npm//source-map-support",
        "@npm//tslib",
        "@npm//typeorm",
        "@npm//uuid",
    ],
)

ts_library(
    name = "file_test_ts_library",
    srcs = glob(["*spec.ts"]),
    module_name = "@melo/file",
    runtime = "nodejs",
    tsconfig = ":file_ts_config",
    deps = [
        ":file_ts_library",
        "//libs/common/src:common_ts_library",
        "@npm//@nestjs/config",
        "@npm//@nestjs/testing",
        "@npm//@nestjs/typeorm",
        "@npm//@types/jest",
        "@npm//@types/mmmagic",
        "@npm//mmmagic",
        "@npm//nock",
        "@npm//ts-jest",
        "@npm//typeorm",
    ],
)

nodejs_binary(
    name = "file_nodejs_binary",
    data = [
        ":file_ts_library",
    ],
    entry_point = ":main",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "file_jest_test",
    srcs = glob(["*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        ":file_test_ts_library",
    ],
)

nodejs_image(
    name = "file_nodejs_image",
    binary = ":file_nodejs_binary",
)

container_push(
    name = "file_container_push",
    format = "Docker",
    image = ":file_nodejs_image",
    registry = "localhost:5000",
    repository = "melo_file",
    tag = "{EXPECTED_REF}",
)
