load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@melo//:apps/common/bazel/jest_test/index.bzl", "jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "melo-api_ts_config",
    src = "//apps/melo-api:tsconfig.app.json",
    deps = [
        "//:tsconfig.json",
    ],
)

ts_library(
    name = "melo-api_ts_library",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*spec.ts"],
    ),
    module_name = "@melo/melo-api",
    runtime = "nodejs",
    tsconfig = ":melo-api_ts_config",
    deps = [
        "//libs/apm/src:apm_ts_library",
        "//libs/common/src:common_ts_library",
        "//libs/prom/src:prom_ts_library",
        "//libs/sentry/src:sentry_ts_library",
        "@npm//@nestjs/common",
        "@npm//@nestjs/config",
        "@npm//@nestjs/core",
        "@npm//@nestjs/jwt",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/passport",
        "@npm//@nestjs/platform-fastify",
        "@npm//@nestjs/platform-socket.io",
        "@npm//@nestjs/swagger",
        "@npm//@nestjs/terminus",
        "@npm//@nestjs/typeorm",
        "@npm//@nestjs/websockets",
        "@npm//@sentry/types",
        "@npm//@types/cache-manager",
        "@npm//@types/hashids",
        "@npm//@types/ms",
        "@npm//@types/multer",
        "@npm//@types/node",
        "@npm//@types/passport-jwt",
        "@npm//@types/passport-local",
        "@npm//@types/passport-strategy",
        "@npm//@types/passport-unique-token",
        "@npm//@types/socket.io",
        "@npm//@types/source-map-support",
        "@npm//@types/uuid",
        "@npm//cache-manager",
        "@npm//cache-manager-ioredis",
        "@npm//crypto-random-string",
        "@npm//fastify",
        "@npm//fastify-swagger",
        "@npm//hashids",
        "@npm//moment",
        "@npm//ms",
        "@npm//multer",
        "@npm//passport",
        "@npm//passport-jwt",
        "@npm//passport-local",
        "@npm//passport-telegram-official",
        "@npm//passport-unique-token",
        "@npm//redis",
        "@npm//reflect-metadata",
        "@npm//rxjs",
        "@npm//source-map-support",
        "@npm//tslib",
        "@npm//typeorm",
        "@npm//uuid",
    ],
)

nodejs_binary(
    name = "melo-api_nodejs_binary",
    data = [
        ":melo-api_ts_library",
    ],
    entry_point = ":main",
    templated_args = [
        "--nobazel_patch_module_resolver",
        "--node_options=--require=source-map-support/register",
    ],
)

jest_test(
    name = "melo-api_jest_test",
    srcs = glob(["**/*spec.ts"]),
    jest_config = "//:jest.config.json",
    deps = [
        "//:tsconfig.json",
        ":melo-api_ts_library",
        "@npm//@nestjs/testing",
        "@npm//@types/jest",
        "@npm//ts-jest",
    ],
)

nodejs_image(
    name = "melo-api_nodejs_image",
    binary = ":melo-api_nodejs_binary",
)

container_push(
    name = "melo-api_container_push",
    format = "Docker",
    image = ":melo-api_nodejs_image",
    registry = "localhost:5000",
    repository = "melo_melo-api",
    tag = "{EXPECTED_REF}",
)
